Added esphome config for climage-0000

--- a/include/sensor/bedroom.yaml
+++ b/include/sensor/bedroom.yaml
@@ -10,7 +10,7 @@
   name: "Bedroom Bed Temperature"
   type: mean
   entity_ids:
-    - sensor.therm_d71e_temperature
+    - sensor.climate_0000_temperature
 - platform: min_max
   unique_id: bedroom_relative_humidity
   name: "Bedroom Relative Humidity"
