--- a/automations.yaml
+++ b/automations.yaml
@@ -183,13 +183,45 @@
     entity_id:
     - binary_sensor.living_room_sofa_occupancy
     to: 'on'
-  conditions: []
+  conditions:
+  - condition: state
+    entity_id: switch.living_room_tv_power
+    state: 'off'
   actions:
   - action: switch.turn_on
     metadata: {}
     data: {}
     target:
       entity_id: switch.living_room_tv_power
+  - wait_for_trigger:
+    - trigger: state
+      entity_id:
+      - media_player.living_room_tv
+      to: 'on'
+    timeout:
+      hours: 0
+      minutes: 2
+      seconds: 0
+      milliseconds: 0
+    continue_on_timeout: false
+  - action: media_player.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: media_player.living_room_tv
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 10
+      milliseconds: 0
+  - condition: state
+    entity_id: binary_sensor.living_room_sofa_occupancy
+    state: 'on'
+  - action: media_player.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: media_player.living_room_tv
   mode: single
 - id: '1716716274495'
   alias: Living Room TV Power Off
@@ -671,11 +703,11 @@
         - humidity_below_threshold
         - maximum_duration_reached
       sequence:
-    - action: fan.turn_off
-      target:
-        entity_id:
-        - fan.bathroom_fan
-      data: {}
+      - action: fan.turn_off
+        target:
+          entity_id:
+          - fan.bathroom_fan
+        data: {}
   mode: single
 - id: '1727641808330'
   alias: Arriving Home
@@ -799,12 +831,12 @@
     id: front_door_open
   conditions: []
   actions:
-      - action: climate.set_preset_mode
-        metadata: {}
-        data:
-          preset_mode: eco
-        target:
-          entity_id: climate.climate_44a4_thermostat
+  - action: climate.set_preset_mode
+    metadata: {}
+    data:
+      preset_mode: eco
+    target:
+      entity_id: climate.climate_44a4_thermostat
   mode: single
 - id: '1734906178083'
   alias: Living Room Sofa Reading Light
