Added timers and events to config

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -74,3 +74,5 @@ switch: !include_dir_merge_list include/switch
 iaquk: !include_dir_merge_named include/iaquk
 fan: !include_dir_merge_list include/fan
 media_player: !include_dir_merge_list include/media_player
+timer: !include_dir_merge_named include/timer
+event: !include_dir_merge_list include/event
