Updated event-based automations

--- a/automations.yaml
+++ b/automations.yaml
@@ -369,11 +369,11 @@
         target:
           entity_id: switch.bedroom_mosquito_repeller
     default:
-  - action: switch.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id: switch.bedroom_mosquito_repeller
+    - action: switch.turn_off
+      metadata: {}
+      data: {}
+      target:
+        entity_id: switch.bedroom_mosquito_repeller
   mode: single
 - id: '1721088136807'
   alias: Bedroom Buttons
@@ -675,11 +675,11 @@
         - maximum_duration_reached
       sequence: []
     default:
-      - action: fan.turn_off
-        target:
-          entity_id:
-          - fan.bathroom_fan
-        data: {}
+    - action: fan.turn_off
+      target:
+        entity_id:
+        - fan.bathroom_fan
+      data: {}
   mode: single
 - id: '1727641808330'
   alias: Arriving Home
@@ -944,18 +944,12 @@
   triggers:
   - trigger: state
     entity_id:
-    - event.rfwb_40g_mt_button_1
-    - event.rfwb_40g_mt_button_2
-    - event.rfwb_40g_mt_button_3
-    - event.rfwb_40g_mt_button_4
+    - event.home_away_button_pressed
     attribute: event_type
     to: initial_press
   - trigger: state
     entity_id:
-    - event.rfwb_40g_mt_button_1
-    - event.rfwb_40g_mt_button_2
-    - event.rfwb_40g_mt_button_3
-    - event.rfwb_40g_mt_button_4
+    - event.home_away_button_pressed
     attribute: event_type
     to: long_press
   conditions: []
@@ -967,6 +961,45 @@
     target:
       entity_id: automation.away
   mode: single
+- id: '1743968212094'
+  alias: Garden Lights
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - event.garden_lights_on_button_pressed
+    id: button_on_pressed
+  - trigger: state
+    entity_id:
+    - event.garden_lights_off_button_pressed
+    id: button_off_pressed
+  actions:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - button_on_pressed
+      sequence:
+      - action: light.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.garden_lights
+    - conditions:
+      - condition: trigger
+        id:
+        - button_off_pressed
+      sequence:
+      - action: light.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.garden_lights
+  variables:
+    default_scene_occupied: scene.garden_lights_default
+    target_entities: '{{ state_attr(default_scene_occupied, ''entity_id'') | list
+      }}'
+    daylight_sensor: binary_sensor.hallway_daylight
 - id: '1745069052672'
   alias: Bathroom Shower Fan Timer
   description: ''
