--- a/include/sensor/bedroom.yaml
+++ b/include/sensor/bedroom.yaml
@@ -54,3 +54,9 @@
   type: mean
   entity_ids:
     - sensor.clock_3006_sound_pressure
+- platform: min_max
+  unique_id: bedroom_carbon_dioxide
+  name: "Bedroom Carbon Dioxide"
+  type: mean
+  entity_ids:
+    - sensor.gas_f1e8_co2
