--- a/esphome/fan-6ab8.yaml
+++ b/esphome/fan-6ab8.yaml
@@ -1,6 +1,14 @@
 substitutions:
   device_name: fan-6ab8
 
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp32.yaml
+  - !include common/web-server.yaml
+
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
@@ -10,29 +18,6 @@ esp32:
   board: esp32dev
   framework:
     type: arduino
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-captive_portal:
 
 # Relay pins
 output:
