--- a/esphome/gas-f1e8.yaml
+++ b/esphome/gas-f1e8.yaml
@@ -1,15 +1,20 @@
 substitutions:
   device_name: gas-f1e8
 
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp32.yaml
+  - !include common/web-server.yaml
+
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
   min_version: 2024.7.0
   platformio_options:
     board_build.flash_mode: dio
-  project: 
-    name: Screek.CO2_Sensor
-    version: SCO2-1
 
 esp32:
   board: lolin_c3_mini
@@ -24,33 +29,6 @@ external_components:
       url: https://github.com/screekworkshop/custom_components_support_for_screek_2a
       ref: main
     components: [uart]
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-    id: ota_pass
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-web_server:
-  port: 80
-
-captive_portal:
 
 i2c:
   sda: GPIO4
