--- a/esphome/light-4da4.yaml
+++ b/esphome/light-4da4.yaml
@@ -1,36 +1,23 @@
+substitutions:
+  device_name: gas-4da4
+
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp32.yaml
+  - !include common/web-server.yaml
+
 esphome:
-  name: "light-4da4"
-  friendly_name: light-4da4
+  name: ${device_name}
+  friendly_name: ${device_name}
   min_version: 2024.11.0
-  name_add_mac_suffix: false
 
 esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: esp-idf
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-captive_portal:
 
 output:
   - platform: ledc
