--- a/esphome/light-a3a0.yaml
+++ b/esphome/light-a3a0.yaml
@@ -1,58 +1,23 @@
 substitutions:
-  name: "light-a3a0"
-  friendly_name: light-a3a0
+  device_name: "light-a3a0"
+
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp32.yaml
+  - !include common/web-server.yaml
 
 esphome:
-  name: ${name}
-  friendly_name: ${friendly_name}
+  name: ${device_name}
+  friendly_name: ${device_name}
   min_version: 2024.7.0
-  name_add_mac_suffix: false
-  project:
-    name: esphome.web
-    version: dev
 
 esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: arduino
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-# Allow Over-The-Air updates
-ota:
-- platform: esphome
-
-# Allow provisioning Wi-Fi via serial
-improv_serial:
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-  # Set up a wifi access point
-  ap: {}
-
-# In combination with the `ap` this allows the user
-# to provision wifi credentials to the device via WiFi AP.
-captive_portal:
-
-dashboard_import:
-  package_import_url: github://esphome/firmware/esphome-web/esp32c3.yaml@main
-  import_full_config: true
-
-# Sets up Bluetooth LE (Only on ESP32) to allow the user
-# to provision wifi credentials to the device.
-esp32_improv:
-  authorizer: none
-
-# To have a "next url" for improv serial
-web_server:
 
 # SK6812 RGBW configuration
 light:
