--- a/esphome/light-c8ee.yaml
+++ b/esphome/light-c8ee.yaml
@@ -1,34 +1,22 @@
+substitutions:
+  device_name: gas-c8ee
+
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp32.yaml
+  - !include common/web-server.yaml
+
 esphome:
-  name: light-c8ee
-  friendly_name: light-c8ee
+  name: ${device_name}
+  friendly_name: ${device_name}
 
 esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: esp-idf
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-captive_portal:
 
 output:
   - platform: ledc
