--- a/esphome/plant-735c.yaml
+++ b/esphome/plant-735c.yaml
@@ -1,5 +1,4 @@
 # Derived from https://github.com/bruvv/LILYGO-T-Higrow-Esphome
-
 substitutions:
   device_name: "plant-735c"
   project_version: "1.1"
@@ -13,6 +12,13 @@ substitutions:
   # run_duration: 11s
   # set how long to sleep in minutes
   # sleep_duration: 60min
+
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/ledvance-smart-table-frame.yaml
 
 esphome:
   name: "${device_name}"
@@ -31,31 +37,6 @@ esphome:
 
 esp32:
   board: lolin_d32
-
-logger:
-
-improv_serial:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-captive_portal:
 
 i2c:
   sda: 25
