--- a/esphome/therm-b31f.yaml
+++ b/esphome/therm-b31f.yaml
@@ -1,6 +1,13 @@
 substitutions:
   device_name: therm-b31f
 
+packages:
+  - !include common/api.yaml
+  - !include common/logger.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/improv-esp8266.yaml
+
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}  
@@ -8,29 +15,6 @@ esphome:
 
 esp8266:
   board: esp01_1m
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
-
-captive_portal:
     
 one_wire:
   - platform: gpio
