--- a/esphome/common/web-server.yaml
+++ b/esphome/common/web-server.yaml
@@ -1,1 +1,6 @@
 web_server:
+  version: 3
+  port: 80
+  auth:
+    username: !secret web_server_username
+    password: !secret web_server_password
