--- a/esphome/gas-d903.yaml
+++ b/esphome/gas-d903.yaml
@@ -7,6 +7,7 @@ packages:
   - !include common/logger.yaml
   - !include common/ota.yaml
   - !include common/wifi.yaml
+  - !include common/web-server.yaml
 
 esphome:
   name: ${device_name}
