--- a/esphome/archive/climate-0000.yaml
+++ b/esphome/archive/climate-0000.yaml
@@ -8,6 +8,12 @@ substitutions:
   default_eco_temperature: "16.0"
   default_comfort_temperature: "19.0"
 
+packages:
+  - !include common/api.yaml
+  - !include common/ota.yaml
+  - !include common/wifi.yaml
+  - !include common/web-server.yaml
+
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
@@ -26,32 +32,6 @@ bk72xx:
 
 logger:
   baud_rate: 0
-
-web_server:
-
-captive_portal:
-
-mdns:
-
-api:
-  encryption:
-    key: !secret api_encryption_key
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-    id: ota_pass
-
-wifi:
-  networks:
-    - ssid: !secret wifi_ssid
-      password: !secret wifi_password
-    - ssid: !secret wifi_ssid2
-      password: !secret wifi_password
-
-  ap:
-    ssid: ${device_name}
-    password: !secret wifi_fallback_ap_password
 
 one_wire:
   - platform: gpio
