--- a/esphome/spl-b94c.yaml
+++ b/esphome/spl-b94c.yaml
@@ -1,6 +1,9 @@
 substitutions:
   device_name: "spl-b94c"
 
+external_components:
+  - source: github://stas-sl/esphome-sound-level-meter
+
 packages:
   - !include common/api.yaml
   - !include common/logger.yaml
