--- a/esphome/gas-f1e8.yaml
+++ b/esphome/gas-f1e8.yaml
@@ -19,9 +19,7 @@ esphome:
 esp32:
   board: lolin_c3_mini
   framework:
-    type: arduino
-    version: 2.0.7
-    platform_version: 6.0.1
+    type: esp-idf
 
 external_components:
   - source:
