--- a/include/switch/bathroom.yaml
+++ b/include/switch/bathroom.yaml
@@ -9,3 +9,9 @@
   name: "Bathroom Mirror Heater"
   entities:
     - switch.switch_aa60
+
+- platform: group
+  unique_id: bathroom_speaker_power
+  name: "Bathroom Speaker Power"
+  entities:
+    - switch.switch_6ee3
