--- a/esphome/occupancy-ba92.yaml
+++ b/esphome/occupancy-ba92.yaml
@@ -4,7 +4,7 @@ substitutions:
 packages:
   - !include common/api.yaml
   # - !include common/logger.yaml
-  - !include common/ota.yaml
+  # - !include common/ota.yaml
   - !include common/openthread.yaml
 
 network:
@@ -13,15 +13,13 @@ network:
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
-  min_version: "2025.6.0" #openthread component
+  min_version: "2025.6.0" # openthread component
 
 esp32:
   board: esp32-h2-devkitm-1
   variant: ESP32H2
   framework:
     type: esp-idf
-    sdkconfig_options:
-      CONFIG_CCACHE_ENABLE: y
 
 logger:
   hardware_uart: USB_SERIAL_JTAG
